Fix(character): update character position to avoid overlapping controls

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -25,6 +25,12 @@
 }
 
 .characterWrapper {
+  min-height: 500px;
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  margin-left: 30px;
+  bottom: 5%;
 }
 
 .controlColumn {
